--- a/index.html
+++ b/index.html
@@ -92,9 +92,14 @@
                   and the
                   <a href="https://www.gemfellowship.org/" target="_blank" rel="noopener noreferrer">GEM Fellowship Program</a>.
                   My research focuses on:  <br> <br>
-                  <b>(1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, <br>
-                  <b>(2)</b> the study of <b>dialectical biases</b> in existing machine learning systems, and <br>
-                  <b>(3)</b> the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities.  <br> <br>
+                  <ol>
+                    <li> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science,</li>
+                    <li> the study of <b>dialectical biases</b> in existing machine learning systems, and</li>
+                    <li>the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities. </li>
+                  </ol>
+                  <!-- <b>1).</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, <br>
+                  <b>2).</b> the study of <b>dialectical biases</b> in existing machine learning systems, and <br>
+                  <b>3).</b> the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities.  <br> <br> -->
                   This culminates under the goal of engaging with, studying, assessing, and critiquing socio-technical systems that people engage with in their everyday lives,
                   as well as developing more inclusive and equitable systems.
                 </p>
@@ -170,9 +175,14 @@
                   and the
                   <a href="https://www.gemfellowship.org/" target="_blank" rel="noopener noreferrer">GEM Fellowship Program</a>.
                   My research focuses on:  <br> <br>
-                  <b>(1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, <br>
+                  <ol>
+                    <li> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science,</li>
+                    <li> the study of <b>dialectical biases</b> in existing machine learning systems, and</li>
+                    <li>the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities. </li>
+                  </ol>
+                  <!-- <b>(1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, <br>
                   <b>(2)</b> the study of <b>dialectical biases</b> in existing machine learning systems, and <br>
-                  <b>(3)</b> the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities. <br> <br>
+                  <b>(3)</b> the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities. <br> <br> -->
                   This culminates under the goal of engaging with, studying, assessing, and critiquing socio-technical systems that people engage with in their everyday lives,
                   as well as developing more inclusive and equitable systems.
                 </p>
