--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
                   <a href="https://www.gemfellowship.org/" target="_blank" rel="noopener noreferrer">GEM Fellowship Program</a>.
                   My research focuses on:  <br> <br>
                   <ol>
-                    <li> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science,</li>
-                    <li> the study of <b>dialectical biases</b> in existing machine learning systems, and</li>
-                    <li>the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities. </li>
+                    <li> <b>(1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science,</li>
+                    <li> <b>(2)</b> the study of <b>dialectical biases</b> in existing machine learning systems, and</li>
+                    <li> <b>(3)</b> the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities. </li>
                   </ol>
                   <!-- <b>(1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, <br>
                   <b>(2)</b> the study of <b>dialectical biases</b> in existing machine learning systems, and <br>
