--- a/index.html
+++ b/index.html
@@ -84,25 +84,28 @@
                   as well as developing more inclusive and equitable systems.
                 </p>
                 <p>Beyond this work, I love doing community service and watching anime!</p> -->
-                <p>
+                 <p>
                   I am a fourth-year PhD candidate in Computer Science at the University of California, Los Angeles advised by
                   <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank" rel="noopener noreferrer">Kai-Wei Chang</a>.
                   I am supported by the
                   <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank" rel="noopener noreferrer">Eugene V. Cota-Robles Fellowship</a>
                   and the
                   <a href="https://www.gemfellowship.org/" target="_blank" rel="noopener noreferrer">GEM Fellowship Program</a>.
-                  My research focuses on:  <br> 
-                  <ol>
-                    <li> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science,</li>
-                    <li> the study of <b>dialectical biases</b> in existing machine learning systems, and</li>
-                    <li>the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities. </li>
+                  My research focuses on: 
+                  </p>
+                  <ol class="research-interests">
+                    <li>The application of <b>NLP methodologies for bias mitigation</b> and quantification in social science.</li>
+                    <li>The study of <b>dialectical biases</b> in existing machine learning systems.</li>
+                    <li>The assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities.</li>
                   </ol>
-                  <!-- <b>1).</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, <br>
-                  <b>2).</b> the study of <b>dialectical biases</b> in existing machine learning systems, and <br>
-                  <b>3).</b> the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities.  <br> <br> -->
+                  <!-- <b>(1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, <br>
+                  <b>(2)</b> the study of <b>dialectical biases</b> in existing machine learning systems, and <br>
+                  <b>(3)</b> the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities. <br> <br> -->
+                  <p>  
                   This culminates under the goal of engaging with, studying, assessing, and critiquing socio-technical systems that people engage with in their everyday lives,
                   as well as developing more inclusive and equitable systems.
                 </p>
+                
                 
                 <p>
                   Beyond this work, I love doing community service and watching anime!
@@ -175,6 +178,7 @@
                   and the
                   <a href="https://www.gemfellowship.org/" target="_blank" rel="noopener noreferrer">GEM Fellowship Program</a>.
                   My research focuses on: 
+                  </p>
                   <ol class="research-interests">
                     <li>The application of <b>NLP methodologies for bias mitigation</b> and quantification in social science.</li>
                     <li>The study of <b>dialectical biases</b> in existing machine learning systems.</li>
@@ -183,6 +187,7 @@
                   <!-- <b>(1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, <br>
                   <b>(2)</b> the study of <b>dialectical biases</b> in existing machine learning systems, and <br>
                   <b>(3)</b> the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities. <br> <br> -->
+                  <p>  
                   This culminates under the goal of engaging with, studying, assessing, and critiquing socio-technical systems that people engage with in their everyday lives,
                   as well as developing more inclusive and equitable systems.
                 </p>
