--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                   My research focuses on: 
                   </p>
                   <ol class="research-interests">
-                    <li>The application of <b>NLP methodologies for bias mitigation</b> and quantification in social science.</li>
-                    <li>The study of <b>dialectical biases</b> in existing machine learning systems.</li>
-                    <li>The assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities.</li>
+                    <li>applications of <b>NLP methodologies for bias mitigation</b> and quantification in social science</li>
+                    <li>studying <b>dialectical biases</b> in existing machine learning systems, and</li>
+                    <li>assessment and development of community-grounded <b>content moderation approaches to support marginalized digital communities</b></li>
                   </ol>
                   <!-- <b>(1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, <br>
                   <b>(2)</b> the study of <b>dialectical biases</b> in existing machine learning systems, and <br>
@@ -180,9 +180,9 @@
                   My research focuses on: 
                   </p>
                   <ol class="research-interests">
-                    <li>The application of <b>NLP methodologies for bias mitigation</b> and quantification in social science.</li>
-                    <li>The study of <b>dialectical biases</b> in existing machine learning systems.</li>
-                    <li>The assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities.</li>
+                    <li>applications of <b>NLP methodologies for bias mitigation</b> and quantification in social science</li>
+                    <li>studying <b>dialectical biases</b> in existing machine learning systems, and</li>
+                    <li>assessment and development of community-grounded <b>content moderation approaches to support marginalized digital communities</b></li>
                   </ol>
                   <!-- <b>(1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, <br>
                   <b>(2)</b> the study of <b>dialectical biases</b> in existing machine learning systems, and <br>
