--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                     <li>studying <b>dialectical biases</b> in existing machine learning systems, and</li>
                     <li>assessment and development of community-grounded <b>content moderation approaches to support marginalized digital communities</b></li>
                   </ol> -->
-                  <span><b>(1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, </span><br>
-                  <span><b>(2)</b> the study of <b>dialectical biases</b> in existing machine learning systems, and </span><br>
-                  <span><b>(3)</b> the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities. </span>
+                  <span><b>1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, </span><br>
+                  <span><b>2)</b> the study of <b>dialectical biases</b> in existing machine learning systems, and </span><br>
+                  <span><b>3)</b> the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities. </span>
                   <p>  
                   This culminates under the goal of engaging with, studying, assessing, and critiquing socio-technical systems that people engage with in their everyday lives,
                   as well as developing more inclusive and equitable systems.
@@ -184,9 +184,9 @@
                     <li>studying <b>dialectical biases</b> in existing machine learning systems, and</li>
                     <li>assessment and development of community-grounded <b>content moderation approaches to support marginalized digital communities</b></li>
                   </ol> -->
-                  <span><b>(1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, </span><br>
-                  <span><b>(2)</b> the study of <b>dialectical biases</b> in existing machine learning systems, and </span><br>
-                  <span><b>(3)</b> the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities. </span>
+                  <span><b>1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, </span><br>
+                  <span><b>2)</b> the study of <b>dialectical biases</b> in existing machine learning systems, and </span><br>
+                  <span><b>3)</b> the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities. </span>
                   <!-- <b>(1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, <br>
                   <b>(2)</b> the study of <b>dialectical biases</b> in existing machine learning systems, and <br>
                   <b>(3)</b> the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities. <br> <br> -->
