--- a/teaching.html
+++ b/teaching.html
@@ -108,7 +108,7 @@
 <!-- <br> -->
 
 <h2>Tutoring</h2>
-<div class="section tutoring">
+<!-- <div class="section tutoring">
   <ul>
     <li>
       In Spring 2025, I was an 
@@ -116,6 +116,11 @@
       I tutored 4 eighth grade students in math four times a week in preparation for their state exam.
     </li>
   </ul>
+</div> -->
+  <div class="training-program"><strong>>Ignite Fellow for Teach for America, 2025</strong></div>
+	<p>
+		In Spring 2025, I was an <a href="https://www.teachforamerica.org/ignite" target="_blank" rel="noopener noreferrer">Ignite Fellow for Teach for America</a>. I tutored 4 eighth grade students in math four times a week in preparation for their state exam.
+	</p>
 </div>
 
     
