--- a/teaching.html
+++ b/teaching.html
@@ -117,7 +117,7 @@
     </li>
   </ul>
 </div> -->
-  <div class="training-program"><strong>>Ignite Fellow for Teach for America, 2025</strong></div>
+  <div class="training-program"><strong>Ignite Fellow for Teach for America, 2025</strong></div>
 	<p>
 		In Spring 2025, I was an <a href="https://www.teachforamerica.org/ignite" target="_blank" rel="noopener noreferrer">Ignite Fellow for Teach for America</a>. I tutored 4 eighth grade students in math four times a week in preparation for their state exam.
 	</p>
