--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                   <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank" rel="noopener noreferrer">Eugene V. Cota-Robles Fellowship</a>
                   and the
                   <a href="https://www.gemfellowship.org/" target="_blank" rel="noopener noreferrer">GEM Fellowship Program</a>.
-                  My research focuses on: 
+                  <b>My research focuses on:</b>
                   </p>
                   <ol class="research-interests">
-                    <li>applications of <b>NLP methodologies for bias mitigation</b> and quantification in social science</li>
+                    <li>applications of <b>NLP methodologies for bias mitigation and quantification in social science</b></li>
                     <li>studying <b>dialectical biases</b> in existing machine learning systems, and</li>
                     <li>assessment and development of community-grounded <b>content moderation approaches to support marginalized digital communities</b></li>
                   </ol>
@@ -177,10 +177,10 @@
                   <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank" rel="noopener noreferrer">Eugene V. Cota-Robles Fellowship</a>
                   and the
                   <a href="https://www.gemfellowship.org/" target="_blank" rel="noopener noreferrer">GEM Fellowship Program</a>.
-                  My research focuses on: 
+                  <b>My research focuses on: </b>
                   </p>
                   <ol class="research-interests">
-                    <li>applications of <b>NLP methodologies for bias mitigation</b> and quantification in social science</li>
+                    <li>applications of <b>NLP methodologies for bias mitigation and quantification in social science</b></li>
                     <li>studying <b>dialectical biases</b> in existing machine learning systems, and</li>
                     <li>assessment and development of community-grounded <b>content moderation approaches to support marginalized digital communities</b></li>
                   </ol>
