--- a/research.html
+++ b/research.html
@@ -74,14 +74,31 @@
 	      <span>TrustNLP @ NAACL 2025</span>
           <span>[<a href="https://aclanthology.org/2025.trustnlp-main.29/" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
 	  
+	 <br>
+		 
+	<span class="title" style="font-weight:400">Survey of bias in text-to-image generation: Definition, evaluation, and mitigation 
+          </span>
+          </span>
+          <span><u>Christina Chance</u>, Da Yin, Dakuo Wang, Kai-Wei Chang</a></span>
+	      <span>TrustNLP @ NAACL 2025</span>
+          <span>[<a href="https://aclanthology.org/2025.trustnlp-main.29/" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
+	  
+	      <br>
+		 
+	<span class="title" style="font-weight:400">Leveraging Large Language Models and Topic Modeling for Toxicity Classification
+          </span>
+          </span>
+          <span>Haniyeh Ehsani Oskouie, <u>Christina Chance</u>, Claire Huang, Margaret Capetz, Elizabeth Eyeson, Majid Sarrafzadeh</a></span>
+	  	  <span>ICNC 2025</span>
+          <span>[<a href="https://ieeexplore.ieee.org/abstract/document/10994061" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
 	      <br>
 
 	  <span class="title" style="font-weight:400">An Analysis of Large Language Models for African American English Speaking Children’s Oral Language Assessment
           </span>
           </span>
-          <span>Alexander Johnson, <u>Christina Chance</u>, Kaycee Stiemke, Hariram Veeramani, Natarajan Balaji Shankar, Abeer Alwan</a></span>
-	      <span>Black Excellence in Engineering, Science & Technology Manuscripts</span>
-          <span>[<a href="https://nsbejournal.scholasticahq.com/article/92286-an-analysis-of-large-language-models-for-african-american-english-speaking-children-s-oral-language-assessment" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
+          <span>Yixin Wan, Arjun Subramonian, Anaelia Ovalle, Zongyu Lin, Ashima Suvarna, <u>Christina Chance</u>, Hritik Bansal, Rebecca Pattichis, Kai-Wei Chang</a></span>
+	      <span>Arxiv</span>
+          <span>[<a href="https://arxiv.org/pdf/2404.01030" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
     <br>
 
 	<span class="title" style="font-weight:400">CORAAL QA: A Dataset and Framework for Open Domain Spontaneous Speech Question Answering from Long Audio Files 
