--- a/research.html
+++ b/research.html
@@ -79,9 +79,9 @@
 	<span class="title" style="font-weight:400">Survey of bias in text-to-image generation: Definition, evaluation, and mitigation 
           </span>
           </span>
-          <span><u>Christina Chance</u>, Da Yin, Dakuo Wang, Kai-Wei Chang</a></span>
-	      <span>TrustNLP @ NAACL 2025</span>
-          <span>[<a href="https://aclanthology.org/2025.trustnlp-main.29/" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
+          <span>Yixin Wan, Arjun Subramonian, Anaelia Ovalle, Zongyu Lin, Ashima Suvarna, <u>Christina Chance</u>, Hritik Bansal, Rebecca Pattichis, Kai-Wei Chang<</a></span>
+	      <span>Arxiv</span>
+          <span>[<a href="https://arxiv.org/pdf/2404.01030" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
 	  
 	      <br>
 		 
@@ -96,9 +96,9 @@
 	  <span class="title" style="font-weight:400">An Analysis of Large Language Models for African American English Speaking Children’s Oral Language Assessment
           </span>
           </span>
-          <span>Yixin Wan, Arjun Subramonian, Anaelia Ovalle, Zongyu Lin, Ashima Suvarna, <u>Christina Chance</u>, Hritik Bansal, Rebecca Pattichis, Kai-Wei Chang</a></span>
-	      <span>Arxiv</span>
-          <span>[<a href="https://arxiv.org/pdf/2404.01030" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
+          <span>Alexander Johnson, <u>Christina Chance</u>, Kaycee Stiemke, Hariram Veeramani, Natarajan Balaji Shankar, Abeer Alwan</a></span>
+	      <span>Journal of Black Excellence in Engineering, Science, & Technology, Volume 1</span>
+          <span>[<a href="https://nsbejournal.scholasticahq.com/article/92286" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
     <br>
 
 	<span class="title" style="font-weight:400">CORAAL QA: A Dataset and Framework for Open Domain Spontaneous Speech Question Answering from Long Audio Files 
