--- a/research.html
+++ b/research.html
@@ -79,7 +79,7 @@
 	<span class="title" style="font-weight:400">Survey of bias in text-to-image generation: Definition, evaluation, and mitigation 
           </span>
           </span>
-          <span>Yixin Wan, Arjun Subramonian, Anaelia Ovalle, Zongyu Lin, Ashima Suvarna, <u>Christina Chance</u>, Hritik Bansal, Rebecca Pattichis, Kai-Wei Chang<</a></span>
+          <span>Yixin Wan, Arjun Subramonian, Anaelia Ovalle, Zongyu Lin, Ashima Suvarna, <u>Christina Chance</u>, Hritik Bansal, Rebecca Pattichis, Kai-Wei Chang</a></span>
 	      <span>Arxiv</span>
           <span>[<a href="https://arxiv.org/pdf/2404.01030" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
 	  
